# pam-ssh-agent

./: .gitignore  AUDIT.md  CLAUDE.md  Cargo.toml  LIVE-VALIDATION.md  LOCKOUT-RECOVERY.md  Makefile  README.md  RELEASE.md  create-deb-dsc.sh  rust-toolchain.toml
.claude/agents/: crypto-parity-reviewer.md  security-reviewer.md
.claude/skills/check/: SKILL.md
.claude/skills/release/: SKILL.md
.github/workflows/: audit.yml  rust.yml
debian/: changelog  control  pam-ssh-agent.install  rules
scripts/: dlopen-check.c  realign-linkedit.py
src/: args.rs  auth.rs  cmd.rs  expansions.rs  filter.rs  lib.rs  logging.rs  openpam.rs  pamext.rs  test.rs  verify.rs
tests/data/: README.md  cert_forever.pub  test.sh
