[package]
name = "pam-ssh-agent"
version = "0.10.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nresare/pam-ssh-agent"
authors = ["Noa Resare"]
description = """
A macOS-only PAM module that authenticates using the ssh-agent.
"""
rust-version = "1.88"

[lib]
name = "pam_ssh_agent"
crate-type = ["lib", "cdylib"]

[dependencies]
ssh-agent-client-rs = "1.1"
getrandom = "0.4"
ssh-key = { version = "0.6", features = ["crypto"] }
# this version needs to match the version brought in by ssh-key
signature = "2.2"
anyhow = "1.0"
syslog = "6.1"
uzers = { version = "0.12", default-features = false }
hostname = { version = "0.4", default-features = false }
log = "0.4"
wait-timeout = "0.2"
# killpg(2) for reaping a timed-out command's whole process group (src/cmd.rs)
libc = "0.2"

[dev-dependencies]
base64 = "0.22"
# this version needs to match the version brought in by ssh-key
ssh-encoding = "0.2"
env_logger = "0.11"
