[package]
name = "pam-ssh-agent"
version = "0.10.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nresare/pam-ssh-agent"
authors = ["Noa Resare"]
description = """
A macOS-only PAM module that authenticates using the ssh-agent.
"""
rust-version = "1.88"

[lib]
name = "pam_ssh_agent"
crate-type = ["lib", "cdylib"]

[dependencies]
ssh-agent-client-rs = "1.1"
getrandom = "0.4"
ssh-key = { version = "0.6", features = ["crypto"] }
# this version needs to match the version brought in by ssh-key
signature = "2.2"
anyhow = "1.0"
syslog = "6.1"
uzers = { version = "0.12", default-features = false }
hostname = { version = "0.4", default-features = false }
log = "0.4"
wait-timeout = "0.2"
# killpg(2) for reaping a timed-out command's whole process group (src/cmd.rs)
libc = "0.2"

[dev-dependencies]
base64 = "0.22"
# this version needs to match the version brought in by ssh-key
ssh-encoding = "0.2"
env_logger = "0.11"

[profile.release]
# panic MUST stay "unwind". Both C entry points (src/openpam.rs / src/lib.rs) wrap
# their bodies in std::panic::catch_unwind to convert a Rust panic into PAM_AUTH_ERR.
# With panic = "abort" there is nothing to catch, so any reachable panic would SIGABRT
# the host process (sudo/su/sshd) mid-authentication instead of failing closed. Do not
# change this to "abort" to save a few KB — it would silently disable the safety model.
panic = "unwind"
# A wraparound in a length/offset/index in any parser (cert, authorized_keys,
# SSH_AUTH_INFO_0) becomes a checked panic -> caught -> safe auth denial, rather than a
# silent miscompute. Cheap for a module that runs briefly per authentication.
overflow-checks = true
lto = "thin"
codegen-units = 1
strip = "symbols"
